# advent-of-code

./: .gitignore  main.py  readme.md
2015/1/: .gitignore  problem.md  solution.md
2015/1/c/: Makefile  main.c
2015/1/c#/: Program.cs
2015/1/c++/: CMakeLists.txt  main.cpp
2015/1/go/: main.go
2015/1/haskell/: main.hs
2015/1/java-impl/: Main.java
2015/1/javascript/: main.js
2015/1/lua/: main.lua
2015/1/php/: main.php
2015/1/python/: main.py
2015/1/ruby/: main.rb
2015/1/swift/: main.swift
2015/1/typescript/: main.ts  package-lock.json
2015/1/zig/: main.zig
2015/2/: .gitignore  solution.md
2015/2/c/: Makefile  main.c
2015/2/c++/: CMakeLists.txt  main.cpp
2015/2/go/: main.go
2015/2/haskell/: main.hs
2015/2/java-impl/: Main.java
2015/2/javascript/: main.js
2015/2/lua/: main.lua
2015/2/php/: main.php
2015/2/python/: main.py
2015/2/ruby/: main.rb
2015/2/swift/: main.swift
2015/2/typescript/: main.ts
2015/2/zig/: main.zig
2015/3/: .gitignore  solution.md
2015/3/c/: Makefile  main-part2.c  main.c
2015/3/c++/: CMakeLists.txt  main-part1.cpp  main-part2.cpp
2015/3/go/: main-part2  main-part2.go  main.go
2015/3/haskell/: main-part2.hs  main.hs
2015/3/java-impl/: Main.java
2015/3/javascript/: main-part2.js  main.js
2015/3/lua/: main-part2.lua  main.lua
2015/3/php/: main-part1.php  main-part2.php
2015/3/python/: main-part1.py  main-part2.py
2015/3/ruby/: main-part1.rb  main-part2.rb
2015/3/swift/: main-part2.swift  main.swift
2015/3/typescript/: main-part1.ts  main-part2.ts
2015/3/zig/: main-part2.zig  main.zig
2015/4/: solution.md
2015/4/c/: Makefile  main.c
2015/4/c++/: CMakeLists.txt  main.cpp
2015/4/go/: main.go
2015/4/haskell/: main.hs
2015/4/java-impl/: Main.java
2015/4/javascript/: main.js
2015/4/lua/: main.lua
2015/4/php/: main.php
2015/4/python/: main.py
2015/4/ruby/: main.rb
2015/4/swift/: main.swift
2015/4/typescript/: main.ts
2015/4/zig/: main.zig
2015/5/: .gitignore
2015/5/c/: Makefile  main.c
2015/5/c++/: CMakeLists.txt  main.cpp
2015/5/go/: main.go
2015/5/haskell/: main.hs
2015/5/java-impl/: Main.java
2015/5/javascript/: main.js
2015/6/: .gitignore
2015/7/: .gitignore  solution.md
2015/c++/4/: CMakeLists.txt  main.cpp
2015/c++/6/: CMakeLists.txt  main-part-1.cpp  main-part-2.cpp
2016/c++/14/: CMakeLists.txt  main-part-1.cpp  main-part-2.cpp
2016/c++/17/: CMakeLists.txt  main.cpp
2024/: .gitignore
scripts/: download_inputs.py  language_dist.py
(+670 files in other folders)
